[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcestack"
version = "0.0.7"
description = "A python package for using the https://sourcestack.co/ API."
readme = "README.md"
authors = [
    { name = "Kevin Sylvestre", email = "kevin@ksylvest.com" },
    { name = "Dean Singh", email = "dean.singh@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["sourcestack"]
dependencies = ["requests"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "python-dotenv>=1.0.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.900",
    "flake8>=3.9",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "destructive: marks tests that modify data"
]

[project.urls]
Homepage = "https://github.com/workflowing/sourcestack"
